--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AppCardapio</string>
+    <string name="app_name">AndroidAPP</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -8,6 +8,6 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Início</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_gallery">Comparar</string>
     <string name="menu_slideshow">Slideshow</string>
 </resources>
